Fixed flicker on node hover

--- a/src/Preview.css
+++ b/src/Preview.css
@@ -7,6 +7,7 @@
     background-color: white;
     width: 180px;
     padding: 5px;
+    pointer-events: none; /* prevents flickering when hovering node */
 }
 .resume h2 {
     font-size: 20px;
